# absproj

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  pyproject.toml
Proj/: Progress.md
api/: pyproject.toml
api/db_docs/: schema.sql
api/metadata/: explore.py
api/src/: PG_service.py  crud.py  rest.py  serializer.py
api/templates/: index.html
api/tests/unit/: utest.py
austatview/: astro.config.mjs  package-lock.json  package.json
austatview/src/: consts.ts  content.config.ts
austatview/src/components/: CollapsibleSection.svelte  DataC.svelte  Footer.astro  Header.astro  Search.astro
austatview/src/layouts/: BlogPost.astro  Layout.astro
austatview/src/pages/: about.astro  index.astro  rss.xml.js  search.astro  search.json.ts
austatview/src/styles/: global.css
db/: schema.sql
db_docs/: init.zsh  logfile  pwdf.txt  schema.sql
go/: .env  Dockerfile  Makefile  README.md  dagger.json  go.mod  go.sum
go/cmd/: main.go
go/cmd/env/: env.go
go/config/: config.go
go/dagger/: dagger.go  go.mod  main.go
go/sql/: V1__Initial.sql
metadata/: abs_dataflow.json  explore.py
scripts/: abs-api.sh
src/: Pg_interface.py  crud.py  models.py  rest.py  statements.py
src/utils/: local.py
templates/: index.html
webservice/: Makefile  go.mod  go.sum
webservice/api/: getspec.yaml
webservice/cmd/: main.go
webservice/config/: config.go
webservice/dagger/: dagger.go  go.mod
webservice/redis/: redis.go
webservice/scripts/: abs-api.sh.sh
webservice/server/: get_data_set.go  server.go
webservice/sql/: V1_initial.sql
(+31 files in other folders)
